Fixed bar sizes + button spacing

--- a/react-gh-pages/src/css/navbar.css
+++ b/react-gh-pages/src/css/navbar.css
@@ -38,7 +38,7 @@
   }
 
   .navbar li:nth-of-type(2):hover ~ .underbar {
-    left: 13.3vw;
+    left: 12.1vw;
     width: 2rem;
     height: 0.2rem;
     background: rgba(199, 82, 82,0.8);
@@ -46,7 +46,7 @@
   }
 
   .navbar li:nth-of-type(3):hover ~ .underbar {
-    left: 20vw;
+    left: 17.5vw;
     width: 50px;
     height: 3px;
     background: rgba(150,250,250,0.5);
@@ -54,15 +54,15 @@
   }
 
   .navbar li:nth-of-type(4):hover ~ .underbar {
-    left: 29vw;
-    width: 40px;
+    left: 24.4vw;
+    width: 50px;
     height: 3px;
     background: rgba(114, 207, 131,0.8);
     box-shadow: 0 0 10px rgba(89, 255, 120,1);
   }
 
   .navbar li:nth-of-type(5):hover ~ .underbar {
-    left: 37vw;
+    left: 30.9vw;
     width: 40px;
     height: 3px;
     background: rgba(252,187,208,0.8);
@@ -70,7 +70,7 @@
   }
 
   .navbar li:nth-of-type(6):hover ~ .underbar {
-    left: 44vw;
+    left: 36.5vw;
     width: 40px;
     height: 3px;
     background: rgba(237,127,9,0.8);
