--- a/react-gh-pages/src/css/styles.css
+++ b/react-gh-pages/src/css/styles.css
@@ -47,6 +47,7 @@
   font-size: 1.5em;
   color: white;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 .begin-box {
